chore: add minimalist to yari
Add minimalist to Yari
Add new font stack
Create colour maps

fix #181

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -2,5 +2,5 @@
 // include them in every page.
 @import "./minimal-prism";
 
-@import "~@mdn/minimalist/sass/mdn-minimalist";
+@import "./ui/minimalist/mdn-minimalist";
 @import "./ui/molecules/grids/grids";
