--- a/client/src/minimal-prism.scss
+++ b/client/src/minimal-prism.scss
@@ -7,14 +7,14 @@ like `pre[class*="language-"]` and `code[class*="language-"]` but because we
 don't use any of that, we can safely ignore it.
 */
 
-@import "~@mdn/minimalist/sass/vars/mdn-web-docs-palette";
+@use "./ui/theme/color-palette/index.scss" as palette;
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata,
 .token.punctuation {
-  color: $mdn-neutral600;
+  color: palette.$mdn-neutral600;
 }
 
 .token.namespace {
@@ -28,7 +28,7 @@ don't use any of that, we can safely ignore it.
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: $mdn-red700;
+  color: palette.$mdn-red700;
 }
 
 .token.selector,
@@ -37,7 +37,7 @@ don't use any of that, we can safely ignore it.
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: $mdn-green700;
+  color: palette.$mdn-green700;
 }
 
 .token.operator,
@@ -45,24 +45,24 @@ don't use any of that, we can safely ignore it.
 .token.url,
 .language-css .token.string,
 .style .token.string {
-  color: $mdn-neutral900;
+  color: palette.$mdn-neutral900;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-  color: $mdn-blue700;
+  color: palette.$mdn-blue700;
 }
 
 .token.function,
 .token.class-name {
-  color: $mdn-red600;
+  color: palette.$mdn-red600;
 }
 
 .token.regex,
 .token.important,
 .token.variable {
-  color: $mdn-orange600;
+  color: palette.$mdn-yellow600;
 }
 
 .token.important,
