--- a/client/src/ui/theme/color-palette/index.scss
+++ b/client/src/ui/theme/color-palette/index.scss
@@ -1,116 +1,118 @@
 /* mdn color palette v2 */
-$black: #000;
-$white: #fff;
+@use "../../vars/sass/variables" as style-disctionary;
 
-$mdn-neutral050: #f9f9fa;
-$mdn-neutral100: #ededf0;
-$mdn-neutral200: #cdcdd4;
-$mdn-neutral300: #b1b1bc;
-$mdn-neutral400: #9595a2;
-$mdn-neutral500: #7a7a8b;
-$mdn-neutral600: #5e5e72;
-$mdn-neutral700: #42435a;
-$mdn-neutral800: #1f2033;
-$mdn-neutral900: #141422;
+$black: style-disctionary.$token-full-color-ramp-black-white-black;
+$white: style-disctionary.$token-full-color-ramp-black-white-white;
 
-$mdn-dark-grey050: #5b5b66;
-$mdn-dark-grey100: #52525e;
-$mdn-dark-grey200: #4a4a55;
-$mdn-dark-grey300: #42414d;
-$mdn-dark-grey400: #3a3944;
-$mdn-dark-grey500: #32313c;
-$mdn-dark-grey600: #2b2a33;
-$mdn-dark-grey700: #23222b;
-$mdn-dark-grey800: #1c1b22;
-$mdn-dark-grey900: #15141a;
+$mdn-neutral050: style-disctionary.$token-full-color-ramp-marketing-grey-05;
+$mdn-neutral100: style-disctionary.$token-full-color-ramp-marketing-grey-10;
+$mdn-neutral200: style-disctionary.$token-full-color-ramp-marketing-grey-20;
+$mdn-neutral300: style-disctionary.$token-full-color-ramp-marketing-grey-30;
+$mdn-neutral400: style-disctionary.$token-full-color-ramp-marketing-grey-40;
+$mdn-neutral500: style-disctionary.$token-full-color-ramp-marketing-grey-50;
+$mdn-neutral600: style-disctionary.$token-full-color-ramp-marketing-grey-60;
+$mdn-neutral700: style-disctionary.$token-full-color-ramp-marketing-grey-70;
+$mdn-neutral800: style-disctionary.$token-full-color-ramp-marketing-grey-80;
+$mdn-neutral900: style-disctionary.$token-full-color-ramp-marketing-grey-90;
 
-$mdn-light-grey050: #fbfbfe;
-$mdn-light-grey100: #f9f9fb;
-$mdn-light-grey200: #f0f0f4;
-$mdn-light-grey300: #e0e0e6;
-$mdn-light-grey400: #cfcfd8;
-$mdn-light-grey500: #bfbfc9;
-$mdn-light-grey600: #afafba;
-$mdn-light-grey700: #9f9fad;
-$mdn-light-grey800: #8f8f9d;
-$mdn-light-grey900: #80808e;
+$mdn-dark-grey050: style-disctionary.$token-full-color-ramp-dark-grey-05;
+$mdn-dark-grey100: style-disctionary.$token-full-color-ramp-dark-grey-10;
+$mdn-dark-grey200: style-disctionary.$token-full-color-ramp-dark-grey-20;
+$mdn-dark-grey300: style-disctionary.$token-full-color-ramp-dark-grey-30;
+$mdn-dark-grey400: style-disctionary.$token-full-color-ramp-dark-grey-40;
+$mdn-dark-grey500: style-disctionary.$token-full-color-ramp-dark-grey-50;
+$mdn-dark-grey600: style-disctionary.$token-full-color-ramp-dark-grey-60;
+$mdn-dark-grey700: style-disctionary.$token-full-color-ramp-dark-grey-70;
+$mdn-dark-grey800: style-disctionary.$token-full-color-ramp-dark-grey-80;
+$mdn-dark-grey900: style-disctionary.$token-full-color-ramp-dark-grey-90;
 
-$mdn-blue050: #aaf2ff;
-$mdn-blue100: #80ebff;
-$mdn-blue200: #0df;
-$mdn-blue300: #00b3f4;
-$mdn-blue400: #0090ed;
-$mdn-blue500: #0060df;
-$mdn-blue600: #0250bb;
-$mdn-blue700: #054096;
-$mdn-blue800: #073072;
-$mdn-blue900: #09204d;
+$mdn-light-grey050: style-disctionary.$token-full-color-ramp-light-grey-05;
+$mdn-light-grey100: style-disctionary.$token-full-color-ramp-light-grey-10;
+$mdn-light-grey200: style-disctionary.$token-full-color-ramp-light-grey-20;
+$mdn-light-grey300: style-disctionary.$token-full-color-ramp-light-grey-30;
+$mdn-light-grey400: style-disctionary.$token-full-color-ramp-light-grey-40;
+$mdn-light-grey500: style-disctionary.$token-full-color-ramp-light-grey-50;
+$mdn-light-grey600: style-disctionary.$token-full-color-ramp-light-grey-60;
+$mdn-light-grey700: style-disctionary.$token-full-color-ramp-light-grey-70;
+$mdn-light-grey800: style-disctionary.$token-full-color-ramp-light-grey-80;
+$mdn-light-grey900: style-disctionary.$token-full-color-ramp-light-grey-90;
 
-$mdn-green050: #e3fff3;
-$mdn-green100: #d1ffee;
-$mdn-green200: #b3ffe3;
-$mdn-green300: #87ffd1;
-$mdn-green400: #54ffbd;
-$mdn-green500: #3fe1b0;
-$mdn-green600: #2ac3a2;
-$mdn-green700: #008787;
-$mdn-green800: #005e5e;
-$mdn-green900: #08403f;
+$mdn-blue050: style-disctionary.$token-full-color-ramp-blue-05;
+$mdn-blue100: style-disctionary.$token-full-color-ramp-blue-10;
+$mdn-blue200: style-disctionary.$token-full-color-ramp-blue-20;
+$mdn-blue300: style-disctionary.$token-full-color-ramp-blue-30;
+$mdn-blue400: style-disctionary.$token-full-color-ramp-blue-40;
+$mdn-blue500: style-disctionary.$token-full-color-ramp-blue-50;
+$mdn-blue600: style-disctionary.$token-full-color-ramp-blue-60;
+$mdn-blue700: style-disctionary.$token-full-color-ramp-blue-70;
+$mdn-blue800: style-disctionary.$token-full-color-ramp-blue-80;
+$mdn-blue900: style-disctionary.$token-full-color-ramp-blue-90;
 
-$mdn-yellow050: #ffc;
-$mdn-yellow100: #ffff98;
-$mdn-yellow200: #ffea80;
-$mdn-yellow300: #ffd567;
-$mdn-yellow400: #ffbd4f;
-$mdn-yellow500: #ffa436;
-$mdn-yellow600: #e27f2e;
-$mdn-yellow700: #c45a27;
-$mdn-yellow800: #a7341f;
-$mdn-yellow900: #960e18;
+$mdn-green050: style-disctionary.$token-full-color-ramp-green-05;
+$mdn-green100: style-disctionary.$token-full-color-ramp-green-10;
+$mdn-green200: style-disctionary.$token-full-color-ramp-green-20;
+$mdn-green300: style-disctionary.$token-full-color-ramp-green-30;
+$mdn-green400: style-disctionary.$token-full-color-ramp-green-40;
+$mdn-green500: style-disctionary.$token-full-color-ramp-green-50;
+$mdn-green600: style-disctionary.$token-full-color-ramp-green-60;
+$mdn-green700: style-disctionary.$token-full-color-ramp-green-70;
+$mdn-green800: style-disctionary.$token-full-color-ramp-green-80;
+$mdn-green900: style-disctionary.$token-full-color-ramp-green-90;
 
-$mdn-red050: #ffdfe7;
-$mdn-red100: #ffbdc5;
-$mdn-red200: #ff9aa2;
-$mdn-red300: #ff848b;
-$mdn-red400: #ff6a75;
-$mdn-red500: #ff4f5e;
-$mdn-red600: #e22850;
-$mdn-red700: #c50042;
-$mdn-red800: #810220;
-$mdn-red900: #440306;
+$mdn-yellow050: style-disctionary.$token-full-color-ramp-yellow-05;
+$mdn-yellow100: style-disctionary.$token-full-color-ramp-yellow-10;
+$mdn-yellow200: style-disctionary.$token-full-color-ramp-yellow-20;
+$mdn-yellow300: style-disctionary.$token-full-color-ramp-yellow-30;
+$mdn-yellow400: style-disctionary.$token-full-color-ramp-yellow-40;
+$mdn-yellow500: style-disctionary.$token-full-color-ramp-yellow-50;
+$mdn-yellow600: style-disctionary.$token-full-color-ramp-yellow-60;
+$mdn-yellow700: style-disctionary.$token-full-color-ramp-yellow-70;
+$mdn-yellow800: style-disctionary.$token-full-color-ramp-yellow-80;
+$mdn-yellow900: style-disctionary.$token-full-color-ramp-yellow-90;
 
-$mdn-violet050: #e7dfff;
-$mdn-violet100: #d9bfff;
-$mdn-violet200: #cb9eff;
-$mdn-violet300: #c688ff;
-$mdn-violet400: #ab71ff;
-$mdn-violet500: #9059ff;
-$mdn-violet600: #7542e4;
-$mdn-violet700: #592acb;
-$mdn-violet800: #45278d;
-$mdn-violet900: #321c64;
+$mdn-red050: style-disctionary.$token-full-color-ramp-red-05;
+$mdn-red100: style-disctionary.$token-full-color-ramp-red-10;
+$mdn-red200: style-disctionary.$token-full-color-ramp-red-20;
+$mdn-red300: style-disctionary.$token-full-color-ramp-red-30;
+$mdn-red400: style-disctionary.$token-full-color-ramp-red-40;
+$mdn-red500: style-disctionary.$token-full-color-ramp-red-50;
+$mdn-red600: style-disctionary.$token-full-color-ramp-red-60;
+$mdn-red700: style-disctionary.$token-full-color-ramp-red-70;
+$mdn-red800: style-disctionary.$token-full-color-ramp-red-80;
+$mdn-red900: style-disctionary.$token-full-color-ramp-red-90;
 
-$mdn-pink050: #ffdff0;
-$mdn-pink100: #ffb4db;
-$mdn-pink200: #ff8ac5;
-$mdn-pink300: #ff6bba;
-$mdn-pink400: #ff4aa2;
-$mdn-pink500: #ff298a;
-$mdn-pink600: #e21587;
-$mdn-pink700: #c60084;
-$mdn-pink800: #7f145b;
-$mdn-pink900: #50134b;
+$mdn-violet050: style-disctionary.$token-full-color-ramp-violet-05;
+$mdn-violet100: style-disctionary.$token-full-color-ramp-violet-10;
+$mdn-violet200: style-disctionary.$token-full-color-ramp-violet-20;
+$mdn-violet300: style-disctionary.$token-full-color-ramp-violet-30;
+$mdn-violet400: style-disctionary.$token-full-color-ramp-violet-40;
+$mdn-violet500: style-disctionary.$token-full-color-ramp-violet-50;
+$mdn-violet600: style-disctionary.$token-full-color-ramp-violet-60;
+$mdn-violet700: style-disctionary.$token-full-color-ramp-violet-70;
+$mdn-violet800: style-disctionary.$token-full-color-ramp-violet-80;
+$mdn-violet900: style-disctionary.$token-full-color-ramp-violet-90;
 
-$mdn-ink050: #393473;
-$mdn-ink100: #342f6d;
-$mdn-ink200: #312a64;
-$mdn-ink300: #2e255d;
-$mdn-ink400: #2b2156;
-$mdn-ink500: #291d4f;
-$mdn-ink600: #271948;
-$mdn-ink700: #20123a;
-$mdn-ink800: #20133a;
-$mdn-ink900: #1d1133;
+$mdn-pink050: style-disctionary.$token-full-color-ramp-pink-05;
+$mdn-pink100: style-disctionary.$token-full-color-ramp-pink-10;
+$mdn-pink200: style-disctionary.$token-full-color-ramp-pink-20;
+$mdn-pink300: style-disctionary.$token-full-color-ramp-pink-30;
+$mdn-pink400: style-disctionary.$token-full-color-ramp-pink-40;
+$mdn-pink500: style-disctionary.$token-full-color-ramp-pink-50;
+$mdn-pink600: style-disctionary.$token-full-color-ramp-pink-60;
+$mdn-pink700: style-disctionary.$token-full-color-ramp-pink-70;
+$mdn-pink800: style-disctionary.$token-full-color-ramp-pink-80;
+$mdn-pink900: style-disctionary.$token-full-color-ramp-pink-90;
+
+$mdn-ink050: style-disctionary.$token-full-color-ramp-ink-05;
+$mdn-ink100: style-disctionary.$token-full-color-ramp-ink-10;
+$mdn-ink200: style-disctionary.$token-full-color-ramp-ink-20;
+$mdn-ink300: style-disctionary.$token-full-color-ramp-ink-30;
+$mdn-ink400: style-disctionary.$token-full-color-ramp-ink-40;
+$mdn-ink500: style-disctionary.$token-full-color-ramp-ink-50;
+$mdn-ink600: style-disctionary.$token-full-color-ramp-ink-60;
+$mdn-ink700: style-disctionary.$token-full-color-ramp-ink-70;
+$mdn-ink800: style-disctionary.$token-full-color-ramp-ink-80;
+$mdn-ink900: style-disctionary.$token-full-color-ramp-ink-90;
 
 $link-color: $mdn-blue700;
 $text-color: $mdn-neutral900;
