--- a/client/src/ui/organisms/header/index.scss
+++ b/client/src/ui/organisms/header/index.scss
@@ -45,6 +45,50 @@
   @media #{$mq-large-desktop-and-up} {
     flex-flow: row;
   }
+
+  #progress-bar {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    .progress-bar-wrapper {
+      position: relative;
+      overflow: hidden;
+      display: block;
+      height: 4px;
+      z-index: 0;
+      background-color: rgb(167, 202, 237);
+
+      .progress-bar-internal {
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        top: 0px;
+        transition: transform 0.2s linear 0s;
+        transform-origin: left center;
+        background-color: #0072b3;
+        width: auto;
+        animation: 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) 0s infinite
+          normal none running progress-bar-animation;
+      }
+    }
+  }
+}
+
+@keyframes progress-bar-animation {
+  0% {
+    left: -35%;
+    right: 100%;
+  }
+  60% {
+    left: 100%;
+    right: -90%;
+  }
+  100% {
+    left: 100%;
+    right: -90%;
+  }
 }
 
 .page-header-main {
