--- a/client/src/ui/organisms/header/index.scss
+++ b/client/src/ui/organisms/header/index.scss
@@ -58,84 +58,29 @@
   z-index: $bring-to-front;
 
   @media #{$mq-tablet-and-up} {
-    display: block;
-    grid-template-columns: 1fr;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
     left: inherit;
     padding: 0;
     position: relative;
     top: inherit;
     z-index: inherit;
 
-    @supports (display: grid) {
-      align-items: center;
-      display: grid;
-    }
-  }
-
-  @media #{$mq-large-desktop-and-up} {
-    grid-template-columns: 2fr 1fr 1fr;
-  }
-
-  .main-nav,
-  .header-search,
-  .auth-container {
-    grid-column: 1/2;
-  }
-
-  .main-nav {
-    grid-row: 2/3;
-  }
-
-  .header-search {
-    grid-row: 1/2;
-  }
-
-  .auth-container {
-    grid-row: 3/4;
-  }
-
-  @media #{$mq-tablet-and-up} {
     .main-nav {
-      grid-column: 1/3;
-      grid-row: 1/2;
+      flex: 1 1 40%;
     }
 
     .header-search {
-      grid-column: 1/2;
-      grid-row: 2/3;
+      flex: 0 1 30%;
     }
 
     .auth-container {
-      grid-column: 2/3;
-      grid-row: 2/3;
-      justify-self: flex-end;
-    }
-  }
-
-  @media #{$mq-large-desktop-and-up} {
-    .main-nav,
-    .header-search,
-    .auth-container {
-      grid-row: 1/2;
-    }
-
-    .main-nav {
-      grid-column: 1/2;
-    }
-
-    .header-search {
-      grid-column: 2/3;
-    }
-
-    .auth-container {
-      grid-column: 3/4;
+      flex: 1 1 30%;
     }
   }
 }
 
 .show {
   display: block;
-  @supports (display: grid) {
-    display: grid;
-  }
 }
